--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -25,7 +25,7 @@ body, html {
   width: 100%;
   opacity: 0;
   transition: .5s ease;
-  background-color: #008CBA;
+  background-color: #2B99B2;
 }
 
 .container-fluid:hover .overlay {
@@ -42,6 +42,36 @@ body, html {
   -ms-transform: translate(-50%, -50%);
 }
 
-.navbar-brand {
-  color: black;
+h1 {
+  color: #B4992E;
+  font-weight: bold;
+  font-size: 3rem;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.overlayContent {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+@media (max-width: 1200px) {
+    h1 {
+        font-size: 2.5rem;
+    }
+}
+
+@media (max-width: 1000px) {
+    h1 {
+        font-size: 2rem;
+    }
+}
+
+@media (max-width: 800px) {
+    h1 {
+        font-size: 1.5rem;
+    }
 }
