--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -45,10 +45,12 @@ body, html {
 h1 {
   color: #B4992E;
   font-weight: bold;
-  font-size: 3rem;
+  font-size: 3.5rem;
   display: flex;
   justify-content: center;
-  margin: 0 auto;
+  align-items: center;
+  margin-top:20px;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 .overlayContent {
@@ -60,18 +62,6 @@ h1 {
 
 @media (max-width: 1200px) {
     h1 {
-        font-size: 2.5rem;
-    }
-}
-
-@media (max-width: 1000px) {
-    h1 {
-        font-size: 2rem;
-    }
-}
-
-@media (max-width: 800px) {
-    h1 {
-        font-size: 1.5rem;
+        font-size: 3rem;
     }
 }
