--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -8,6 +8,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <!-- Google Fonts -->
+
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/stylesheets/main.css">
     <title>MWCC</title>
@@ -42,8 +45,8 @@
     <!-- Code -->
     <div class="container-fluid px-0 bg">
       <div class="container">
-        <div class="row">
-          <h1>MAJDALANI WORLD CUP COMPETITION</h1>
+        <div class="row text-center">
+          <h1 class="mx-auto">MAJDALANI WORLD CUP COMPETITION</h1>
         </div>
       </div>
 
