Ad cards to competitions page

--- a/views/competitions/index.ejs
+++ b/views/competitions/index.ejs
@@ -1,7 +1,94 @@
 <% include ../partials/header.ejs %>
 <% include ../partials/navbar.ejs %>
 
-<h1>I still have to fix the login with facebook</h1>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-3">Competitions</h1>
+    <p class="lead text-center">Join the competition of your choice.<br />To join a competition, you have to be part of that group on Facebook.</p>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-4 col-md-6 mb-3">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Competition 1</h5>
+          <p class="card-text mt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia harum repellat nesciunt ipsum maiores voluptatum libero, suscipit tempora beatae consequuntur.</p>
+          <a href="#" class="btn btn-xs btn-outline-primary">Join</a>
+          <a href="#" class="btn btn-xs btn-outline-success">View</a>
+          <a href="#" class="btn btn-xs btn-outline-warning">Edit</a>
+          <a href="#" class="btn btn-xs btn-outline-danger">Delete</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-6 mb-3">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Competition 2</h5>
+          <p class="card-text mt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia harum repellat nesciunt ipsum maiores voluptatum libero, suscipit tempora beatae consequuntur.</p>
+          <a href="#" class="btn btn-xs btn-outline-primary">Join</a>
+          <a href="#" class="btn btn-xs btn-outline-success">View</a>
+          <a href="#" class="btn btn-xs btn-outline-warning">Edit</a>
+          <a href="#" class="btn btn-xs btn-outline-danger">Delete</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-6 mb-3">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Competition 3</h5>
+          <p class="card-text mt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia harum repellat nesciunt ipsum maiores voluptatum libero, suscipit tempora beatae consequuntur.</p>
+          <a href="#" class="btn btn-xs btn-outline-primary">Join</a>
+          <a href="#" class="btn btn-xs btn-outline-success">View</a>
+          <a href="#" class="btn btn-xs btn-outline-warning">Edit</a>
+          <a href="#" class="btn btn-xs btn-outline-danger">Delete</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-6 mb-3">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Competition 4</h5>
+          <p class="card-text mt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia harum repellat nesciunt ipsum maiores voluptatum libero, suscipit tempora beatae consequuntur.</p>
+          <a href="#" class="btn btn-xs btn-outline-primary">Join</a>
+          <a href="#" class="btn btn-xs btn-outline-success">View</a>
+          <a href="#" class="btn btn-xs btn-outline-warning">Edit</a>
+          <a href="#" class="btn btn-xs btn-outline-danger">Delete</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-6 mb-3">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Competition 5</h5>
+          <p class="card-text mt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia harum repellat nesciunt ipsum maiores voluptatum libero, suscipit tempora beatae consequuntur.</p>
+          <a href="#" class="btn btn-xs btn-outline-primary">Join</a>
+          <a href="#" class="btn btn-xs btn-outline-success">View</a>
+          <a href="#" class="btn btn-xs btn-outline-warning">Edit</a>
+          <a href="#" class="btn btn-xs btn-outline-danger">Delete</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-6 mb-3">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Competition 6</h5>
+          <p class="card-text mt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia harum repellat nesciunt ipsum maiores voluptatum libero, suscipit tempora beatae consequuntur.</p>
+          <a href="#" class="btn btn-xs btn-outline-primary">Join</a>
+          <a href="#" class="btn btn-xs btn-outline-success">View</a>
+          <a href="#" class="btn btn-xs btn-outline-warning">Edit</a>
+          <a href="#" class="btn btn-xs btn-outline-danger">Delete</a>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+</div>
+
+
+<h4 class="text-center">I still have to fix the login with facebook</h4>
 
 
 <% include ../partials/footer.ejs %>
