--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -12,7 +12,7 @@
         // for FB.getLoginStatus().
         if (response.status === 'connected') {
           // Logged into your app and Facebook.
-          testAPI();
+          successfulRedirect();
         } else {
           // The person is not logged into your app or we are unable to tell.
           FB.login();
@@ -59,6 +59,11 @@
           console.log('Successful login for: ' + response.name);
         });
       }
+		
+	  function successfulRedirect() {
+		  window.location.href = "https://mwcc-fktlo.run.goorm.io/competitions"
+	  }
+	
     </script>
 
     <div id="fb-root"></div>
