--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -61,7 +61,8 @@
       }
 		
 	  function successfulRedirect() {
-		  window.location.href = "https://mwcc-fktlo.run.goorm.io/competitions"
+		  window.location.href = "https://mwcc-fktlo.run.goorm.io/competitions";
+		  FB.api('/me/groups', )
 	  }
 	
     </script>
